Fix a crash when thumbnailer loads a PSD with embedded resources

There were two issues:

1) When the document doesn't have its own temporary storages, we
   shouldn't add resources to them.

2) We cannot add embedded resources to **any** storage, when the
   document is being loaded from the non-gui thread (which happens
   in the thumbnailer). Therefore we need a special class,
   KisEmbeddedResourceStorageProxy, which would put the embedded
   resources into KisLocalStrokeResources and dispatch to other
   resources that need them.

BUG:457123